--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://via.placeholder.com/40" alt="Logo PBN">
-                <span>PBN</span>
+                <img src="2.png" alt="Logo PBN">
+                <span></span>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -27,7 +27,7 @@
             <h1>Hi <span id="user-name"></span>, Welcome To Our Website</h1>
             <p>Ini adalah website latihan pertamamu. Semangat!</p>
             <div class="hero-banner">
-                <img src="https://via.placeholder.com/1366x578/cccccc/888888?text=Banner+Utama" alt="Website Banner">
+                <img src="1.png" alt="Website Banner">
             </div>
         </section>
 
