--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://via.placeholder.com/40" alt="Logo PBN">
-                <span>PBN</span>
+                <img src="2.png" alt="Logo PBN">
+                <span></span>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,9 +24,9 @@
 
     <main>
         <section class="profile-banner">
-            <img src="https://via.placeholder.com/1366x400/333333/ffffff?text=Our+Vision" alt="Profile Banner">
+            <img src="3.png" alt="Profile Banner">
             <div class="banner-text">
-                <h1>Profil Pemuda Bangkit Nasional</h1>
+                <h1></h1>
             </div>
         </section>
 
